--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,14 @@ html *::first-letter {
     background: #b3d4fc;
     text-shadow: none
 }
+.team-emblem {
+    width: 20px;
+    height: 20px;
+    vertical-align: middle;
+    border-radius: 5px; /* Bo tròn góc ảnh */
+    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2); /* Thêm đổ bóng */
+    display: inline-block;
+}
 
 hr {
     display: block;
